--- a/projects/smart/src/index.html
+++ b/projects/smart/src/index.html
@@ -86,79 +86,79 @@
 
   <main class="main">
     <section id="testimonials" class="testimonials">
-      <div class="container">
-        <h3 class="testimonials__heading">Testimonials</h3>
+      <!-- <div class="container"> -->
+      <h3 class="testimonials__heading">Testimonials</h3>
 
-        <div class="swiper-container">
-          <div class="swiper-wrapper">
+      <div class="swiper-container">
+        <div class="swiper-wrapper">
 
-            <div class="testimonials__item-container swiper-slide">
-              <div class="testimonials__card-wrapper">
-                <p class="testimonials__text">
-                  When I was stuck with my essay writing and thought that there is no way out, you guys appeared out
-                  of
-                  the
-                  blue! Your writing team deserves appreciation. I cannot imagine my student life without your
-                  competent
-                  assistance. Thank you!
-                </p>
-                <span class="testimonials__author">Andrey L.</span>
-              </div>
-
-              <div class="testimonials__detail-wrapper">
-                <div class="swiper-pagination testimonials__rate"></div>
-                <!-- <span class="testimonials__rate">3/10</span> -->
-                <button class="primary-btn testimonials__primary-btn">Add Testimonial</button>
-              </div>
+          <div class="testimonials__item-container swiper-slide">
+            <div class="testimonials__card-wrapper">
+              <p class="testimonials__text">
+                When I was stuck with my essay writing and thought that there is no way out, you guys appeared out
+                of
+                the
+                blue! Your writing team deserves appreciation. I cannot imagine my student life without your
+                competent
+                assistance. Thank you!
+              </p>
+              <span class="testimonials__author">Andrey L.</span>
             </div>
 
-            <div class="testimonials__item-container swiper-slide">
-              <div class="testimonials__card-wrapper">
-                <p class="testimonials__text">
-                  When I was stuck with my essay writing and thought that there is no way out, you guys appeared out
-                  of
-                  the
-                  blue! Your writing team deserves appreciation. I cannot imagine my student life without your
-                  competent
-                  assistance. Thank you!
-                </p>
-                <span class="testimonials__author">Andrey L.</span>
-              </div>
-
-              <div class="testimonials__detail-wrapper">
-                <div class="swiper-pagination testimonials__rate"></div>
-                <!-- <span class="testimonials__rate">3/10</span> -->
-                <button class="primary-btn testimonials__primary-btn">Add Testimonial</button>
-              </div>
+            <div class="testimonials__detail-wrapper">
+              <div class="swiper-pagination testimonials__rate"></div>
+              <!-- <span class="testimonials__rate">3/10</span> -->
+              <button class="primary-btn testimonials__primary-btn">Add Testimonial</button>
             </div>
-
-            <div class="testimonials__item-container swiper-slide">
-              <div class="testimonials__card-wrapper">
-                <p class="testimonials__text">
-                  When I was stuck with my essay writing and thought that there is no way out, you guys appeared out
-                  of
-                  the
-                  blue! Your writing team deserves appreciation. I cannot imagine my student life without your
-                  competent
-                  assistance. Thank you!
-                </p>
-                <span class="testimonials__author">Andrey L.</span>
-              </div>
-
-              <div class="testimonials__detail-wrapper">
-                <div class="swiper-pagination testimonials__rate"></div>
-                <!-- <span class="testimonials__rate">3/10</span> -->
-                <button class="primary-btn testimonials__primary-btn">Add Testimonial</button>
-              </div>
-            </div>
-
           </div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
+
+          <div class="testimonials__item-container swiper-slide">
+            <div class="testimonials__card-wrapper">
+              <p class="testimonials__text">
+                When I was stuck with my essay writing and thought that there is no way out, you guys appeared out
+                of
+                the
+                blue! Your writing team deserves appreciation. I cannot imagine my student life without your
+                competent
+                assistance. Thank you!
+              </p>
+              <span class="testimonials__author">Andrey L.</span>
+            </div>
+
+            <div class="testimonials__detail-wrapper">
+              <div class="swiper-pagination testimonials__rate"></div>
+              <!-- <span class="testimonials__rate">3/10</span> -->
+              <button class="primary-btn testimonials__primary-btn">Add Testimonial</button>
+            </div>
+          </div>
+
+          <div class="testimonials__item-container swiper-slide">
+            <div class="testimonials__card-wrapper">
+              <p class="testimonials__text">
+                When I was stuck with my essay writing and thought that there is no way out, you guys appeared out
+                of
+                the
+                blue! Your writing team deserves appreciation. I cannot imagine my student life without your
+                competent
+                assistance. Thank you!
+              </p>
+              <span class="testimonials__author">Andrey L.</span>
+            </div>
+
+            <div class="testimonials__detail-wrapper">
+              <div class="swiper-pagination testimonials__rate"></div>
+              <!-- <span class="testimonials__rate">3/10</span> -->
+              <button class="primary-btn testimonials__primary-btn">Add Testimonial</button>
+            </div>
+          </div>
 
         </div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
 
       </div>
+
+      <!-- </div> -->
     </section>
   </main>
 
